--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,9 @@ aiohttp = "^3.8.1"
 loguru = "^0.5.3"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^7.1.1"
 black = {version = "^21.12b0", allow-prereleases = true}
+pytest-asyncio = "^0.18.3"
 
 [tool.commitizen]
 name = "cz_conventional_commits"
