--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ loguru = "^0.7.0"
 pytest = "^7.4.3"
 black = {version = "^21.12b0", allow-prereleases = true}
 pytest-asyncio = "^0.18.3"
+pytest-dotenv = "^0.5.2"
 
 [tool.commitizen]
 name = "cz_conventional_commits"
@@ -23,6 +24,9 @@ version_files = [
     "pyproject.toml:version",
     "whatsapp/__init__.py:__version__"
 ]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
