--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 driconfig = "^0.2.0"
 aiohttp = "^3.9.1"
 loguru = "^0.7.0"
+aioretry = "^5.0.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.3"
